--- a/2.3.0/example-classic-mbsdr/ios/Example/Info.plist
+++ b/2.3.0/example-classic-mbsdr/ios/Example/Info.plist
@@ -2,10 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Classic Example</string>
+	<string>Example</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,8 +24,6 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -34,15 +34,11 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
-	<key>NSLocalNetworkUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
+	<string>The App need this for the correct usage.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
+	<string></string>
+	<key>RCTNewArchEnabled</key>
+	<true/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>CircularStd-Bold.ttf</string>
