--- a/2.3.0/example-classic-mbsdr/package.json
+++ b/2.3.0/example-classic-mbsdr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Example",
-  "version": "2.3.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,32 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.11.0",
-    "react": "19.0.0",
-    "react-native": "0.79.1"
+    "@facephi/sdk-core-react-native": "file:../2.3.0/sdk-core",
+    "@facephi/sdk-selphi-react-native": "file:../2.3.0/sdk-selphi",
+    "@facephi/sdk-selphid-mbsdr-react-native": "file:../2.3.0/sdk-selphid-mbsdr",
+    "@react-native/new-app-screen": "0.82.0",
+    "react": "19.1.1",
+    "react-native": "0.82.0",
+    "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
-    "@react-native-community/cli-platform-android": "18.0.0",
-    "@react-native-community/cli-platform-ios": "18.0.0",
-    "@react-native/babel-preset": "0.79.1",
-    "@react-native/eslint-config": "0.79.1",
-    "@react-native/metro-config": "0.79.1",
-    "@react-native/typescript-config": "0.79.1",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.82.0",
+    "@react-native/eslint-config": "0.82.0",
+    "@react-native/metro-config": "0.82.0",
+    "@react-native/typescript-config": "0.82.0",
     "@types/jest": "^29.5.13",
-    "@types/prop-types": "^15.7.14",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
-    "eslint": "^8.19.0",
+    "@types/react": "^19.1.1",
+    "@types/react-test-renderer": "^19.1.0",
+    "eslint": "^8.38.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "react-test-renderer": "19.1.1",
+    "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   }
 }
