--- a/2.3.0/example-selphi/package.json
+++ b/2.3.0/example-selphi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "selphi",
+  "name": "Example",
   "version": "2.3.0",
   "private": true,
   "scripts": {
@@ -10,27 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.75.2"
+    "@facephi/sdk-core-react-native": "file:../2.3.0/sdk-core",
+    "@facephi/sdk-selphi-react-native": "file:../2.3.0/sdk-selphi",
+    "@react-native/new-app-screen": "0.82.0",
+    "react": "19.1.1",
+    "react-native": "0.82.0",
+    "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.2",
-    "@react-native/eslint-config": "0.75.2",
-    "@react-native/metro-config": "0.75.2",
-    "@react-native/typescript-config": "0.75.2",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.82.0",
+    "@react-native/eslint-config": "0.82.0",
+    "@react-native/metro-config": "0.82.0",
+    "@react-native/typescript-config": "0.82.0",
+    "@types/jest": "^29.5.13",
+    "@types/prop-types": "^15.7.15",
+    "@types/react": "^19.1.1",
+    "@types/react-test-renderer": "^19.1.0",
+    "eslint": "^8.38.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "react-test-renderer": "19.1.1",
+    "typescript": "^5.8.3"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   }
 }
