[master] feat: upd phingers demo.

--- a/2.3.0/example-phingers/android/app/build.gradle
+++ b/2.3.0/example-phingers/android/app/build.gradle
@@ -79,7 +79,8 @@ android {
 
     namespace "com.example"
     defaultConfig {
-        applicationId "com.facephi.sdk.demo"
+        //applicationId "com.facephi.sdk.demo"
+        applicationId "com.facephi.demo.fingerprint"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
