--- a/2.3.0/example-voice/tsconfig.json
+++ b/2.3.0/example-voice/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "esModuleInterop": true, 
+    "strict": true
   }
 }
