--- a/2.3.0/example-classic/package.json
+++ b/2.3.0/example-classic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Example",
-  "version": "2.3.0",
+  "version": "2.5.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.81.1",
     "react": "19.1.0",
     "react-native": "0.81.1",
@@ -28,6 +27,7 @@
     "@react-native/metro-config": "0.81.1",
     "@react-native/typescript-config": "0.81.1",
     "@types/jest": "^29.5.13",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
