--- a/2.3.0/example-classic-mbsdr/package.json
+++ b/2.3.0/example-classic-mbsdr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Example",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -27,6 +27,7 @@
     "@react-native/metro-config": "0.82.0",
     "@react-native/typescript-config": "0.82.0",
     "@types/jest": "^29.5.13",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.38.0",
