[master] feat: improve voice samples.

--- a/2.3.0/example-videoid/tsconfig.json
+++ b/2.3.0/example-videoid/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "esModuleInterop": true,
   }
 }
