--- a/2.3.0/example-voice/tsconfig.json
+++ b/2.3.0/example-voice/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
-  "compilerOptions": {
-    "strict": true
-  }
+  "extends": "@react-native/typescript-config",
 }
