--- a/2.3.0/example-voice/android/app/build.gradle
+++ b/2.3.0/example-voice/android/app/build.gradle
@@ -63,26 +63,21 @@ def enableProguardInReleaseBuilds = false
  * The preferred build flavor of JavaScriptCore (JSC)
  *
  * For example, to use the international variant, you can use:
- * `def jscFlavor = 'org.webkit:android-jsc-intl:+'`
+ * `def jscFlavor = io.github.react-native-community:jsc-android-intl:2026004.+`
  *
  * The international variant includes ICU i18n library and necessary data
  * allowing to use e.g. `Date.toLocaleString` and `String.localeCompare` that
  * give correct results when using with locales other than en-US. Note that
  * this variant is about 6MiB larger per architecture than default.
  */
-def jscFlavor = 'org.webkit:android-jsc:+'
+def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
 
 android {
-    packagingOptions {
-        pickFirst("**/*.so") // SELPHI + VOICE
-        pickFirst("META-INF/versions/9/OSGI-INF/MANIFEST.MF") // NFC
-    }
-
     ndkVersion rootProject.ext.ndkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.facephi.sdk.demo"
+    namespace "com.example"
     defaultConfig {
         applicationId "com.facephi.sdk.demo"
         minSdkVersion rootProject.ext.minSdkVersion
