--- a/2.3.0/example-voice/ios/example/Info.plist
+++ b/2.3.0/example-voice/ios/example/Info.plist
@@ -2,8 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>CircularStd-Bold.ttf</string>
+	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need this to work property.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need this to work property.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -33,18 +39,10 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>The app needs this permission for the correct usage.</string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>CircularStd-Bold.ttf</string>
-	</array>
+	<string></string>
+	<key>RCTNewArchEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
