--- a/2.3.0/example-videoid/ios/Podfile
+++ b/2.3.0/example-videoid/ios/Podfile
@@ -17,29 +17,18 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-
 target 'Example' do
   config = use_native_modules!
-
-  dynamic_frameworks = ['PromisesObjC', 'Protobuf', 'nanopb', 'Starscream']
-
-  pre_install do |installer|
-    installer.pod_targets.each do |pod|
-      if dynamic_frameworks.include?(pod.name)
-        puts "Overriding the build_type to dynamic_framework for #{pod.name}"      
-          def pod.build_type;
-          Pod::BuildType.dynamic_framework      
-        end
-      end
-    end
-  end
-
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  # Flipper: use_frameworks is not compatible with Flipper. 
+  # You must disable Flipper by commenting out the :flipper_configuration line in your Podfile. 
+  # Flipper is deprecated in the react-native community and this will not be fixed.
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
