--- a/2.3.0/example-videoid/package.json
+++ b/2.3.0/example-videoid/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Example",
-  "version": "2.5.0",
+  "name": "example",
+  "version": "2.6.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,29 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/prop-types": "^15.7.14",
-    "react": "19.0.0",
-    "react-native": "0.78.2"
+    "@react-native-picker/picker": "^2.11.4",
+    "@react-native/new-app-screen": "0.83.0",
+    "react": "19.2.4",
+    "react-native": "0.83.0",
+    "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.78.2",
-    "@react-native/eslint-config": "0.78.2",
-    "@react-native/metro-config": "0.78.2",
-    "@react-native/typescript-config": "0.78.2",
+    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli-platform-android": "20.0.0",
+    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native/babel-preset": "0.83.0",
+    "@react-native/eslint-config": "0.83.0",
+    "@react-native/metro-config": "0.83.0",
+    "@react-native/typescript-config": "0.83.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
+    "@types/prop-types": "^15.7.15",
+    "@types/react": "^19.2.4",
+    "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "react-test-renderer": "19.2.4",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18"
