--- a/2.3.0/example-videoid/tsconfig.json
+++ b/2.3.0/example-videoid/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
-  "compilerOptions": {
-    "jsx": "preserve",
-    "esModuleInterop": true,
-  }
+  "extends": "@react-native/typescript-config",
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["**/node_modules", "**/Pods"]
 }
