[master] feat: migrate phingers to react 0.83.

--- a/2.3.0/example-phingers/android/app/build.gradle
+++ b/2.3.0/example-phingers/android/app/build.gradle
@@ -79,8 +79,7 @@ android {
 
     namespace "com.example"
     defaultConfig {
-        //applicationId "com.facephi.sdk.demo"
-        applicationId "com.facephi.demo.fingerprint"
+        applicationId "com.facephi.sdk.demo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
