--- a/2.3.0/example-phingers/ios/Podfile
+++ b/2.3.0/example-phingers/ios/Podfile
@@ -19,13 +19,16 @@ end
 
 target 'Example' do
   config = use_native_modules!
-
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  # Flipper: use_frameworks is not compatible with Flipper. 
+  # You must disable Flipper by commenting out the :flipper_configuration line in your Podfile. 
+  # Flipper is deprecated in the react-native community and this will not be fixed.
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
@@ -34,5 +37,14 @@ target 'Example' do
       :mac_catalyst_enabled => false,
       # :ccache_enabled => true
     )
+
+    ### EVITA CAMBIAR EL IOS DEVELOPMENT TARGET DE LOS PODS.
+    installer.generated_projects.each do |project|
+      project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+          end
+      end
+    end
   end
 end
