--- a/2.3.0/example-nfc/ios/Example/Example.entitlements
+++ b/2.3.0/example-nfc/ios/Example/Example.entitlements
@@ -4,7 +4,9 @@
 <dict>
 	<key>com.apple.developer.nfc.readersession.formats</key>
 	<array>
+		<string>NDEF</string>
 		<string>TAG</string>
+		<string>PACE</string>
 	</array>
 </dict>
 </plist>
